# Sharing

./: .gitignore  README.md
demo_ims_channelname/: demofile.ims  inspect_imarisfile.py  main.py  pyproject.toml  readme.md
demo_ims_channelname/demo_ims_channelname/: ImarisFile.py  __init__.py
demo_zstd_tifffile/: demo_ometiff.py  demo_zstd.py  newfile.ome.tif  pyproject.toml  readme.md  withoutzstd.tiff  withzstd.tiff
warpy/: ShowAffine.ipynb  ShowDeformation.ipynb  transform.json  warpytransform.py
