[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_zstd_tiffile"
version = "0.0.1"
description = "Demo"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tifffile", "imagecodecs", "numpy"
]
requires-python = ">=3.11"